--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <div class="add-task-modal">
 
      <div class="task-name-txt">Task name*: 
-      <input type="text" class="task-input" name="Task name" id="task-input" placeholder="Insert Task Name">
+      <input type="text" class="task-input" name="Task name" placeholder="Insert Task Name">
     </div>
 
      <div class="date-txt">Date: 
       <input type="date" class="date-input">
     </div>
 
-     <div class="time-txt">Time  : 
+     <div class="time-txt">Time: 
       <input type="time" class="time-input">
     </div>
 
