--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="add-task-modal">
 
      <div class="task-name-txt">Task name*: 
-      <input type="text" class="task-input" name="Task name" placeholder="Insert Task Name">
+      <input type="text" class="task-input" name="Task name" id="task-input" placeholder="Insert Task Name">
     </div>
 
      <div class="date-txt">Date: 
