--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="modal-section">
     <div class="add-task-modal">
 
-     <div class="task-name-txt">Task name*: 
+     <div class="task-name-txt">Task name: 
       <input type="text" class="task-input" name="Task name" id="task-input" placeholder="Insert Task Name">
     </div>
 
