--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <input type="text" class="task-input" name="Task name" id="task-input" placeholder="Insert Task Name">
     </div>
 
+    <div class="task-name-txt">Description: 
+      <input type="text" class="descrition-input" name="description" id="descrition-input" placeholder="Insert Description">
+    </div>
+
      <div class="date-txt">Date: 
       <input type="date" class="date-input">
     </div>
