--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="description-txt">Description: 
-      <textarea type="text" class="descrition-input" name="description" id="descrition-input" placeholder="Insert Description"></textarea>
+      <textarea type="text" class="description-input" name="description" id="descrition-input" placeholder="Insert Description"></textarea>
     </div>
 
      <div class="date-txt">Date: 
