--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     </div>
     <button class="add-task-btn-modal">Add Task</button>
+    <button class="save-task-btn-modal">Save Task</button>
   </div>
 </div>
 
