--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<div class="modal-full">
+<modal class="modal-full">
 
 
   <div class="modal-section">
@@ -41,7 +41,7 @@
     <button class="add-task-btn-modal">Add Task</button>
     <button class="save-task-btn-modal">Save Task</button>
   </div>
-</div>
+</modal>
 
 
   <div class="normal-container">
