--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
   <div class="normal-container">
+<div class="top">
+    <h1 class="heading">Task To Do</h1>
     <button class="for-modal-btn">
-      Click to add task
-    </button>
+      +
+    </button></div>
 
 <modal class="modal-full">
 
