--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 class="heading">Task To Do</h1>
     <button class="for-modal-btn">
       +
-    </button></div>
+    </button></div> </div>
 
 <modal class="modal-full">
 
@@ -55,7 +55,7 @@
 
     
 
-  </div>
+ 
   <script src="index.js"></script>
 </body>
 </html>
